--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "superagent": "^4.0.0"
   }
 }
