--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "license": "MIT",
   "dependencies": {
     "history": "^4.7.2",
+    "humps": "^2.0.1",
+    "node-sass": "^4.11.0",
     "prop-types": "^15.7.2",
+    "qs": "^6.7.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-redux": "^6.0.0",
@@ -13,8 +16,7 @@
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
-    "superagent": "^4.0.0",
-    "node-sass": "^4.11.0"
+    "superagent": "^4.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
