Added IE 11 support

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "build": "webpack --config webpack.prod.js"
   },
   "browserslist": [
-    "defaults"
+    "cover 100%",
+    "not dead"
   ]
 }
