Removed support css for IE 11

--- a/package.json
+++ b/package.json
@@ -47,7 +47,6 @@
     "build": "webpack --config webpack.prod.js"
   },
   "browserslist": [
-    "cover 100%",
-    "not dead"
+    "defaults"
   ]
 }
