--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "engines": {
+    "node": "12.x"
+  },
   "dependencies": {
     "core-js": "3",
     "ejs": "^2.6.2",
@@ -48,7 +51,7 @@
     "start": "webpack-dev-server --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
     "build:server": "webpack --config webpack.server.js",
-    "vercel-build": "yarn install && yarn build && yarn build:server"
+    "heroku-prebuild": "yarn build && yarn build:server"
   },
   "browserslist": [
     "defaults"
