--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "start": "webpack-dev-server --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
     "build:server": "webpack --config webpack.server.js",
-    "heroku-prebuild": "yarn build && yarn build:server"
+    "heroku-prebuild": "yarn install && yarn build && yarn build:server"
   },
   "browserslist": [
     "defaults"
